# knetswitch

knetswitch/: AUTHORS  Makefile  Makefile.am  Makefile.in  README  config.cache  config.h  config.status  configure  configure.in  configure.in.in  knetswitch.kdevprj  knetswitch.kdevses  knetswitch.lsm  libtool  subdirs
knetswitch/admin/: mkinstalldirs
knetswitch/doc/: Makefile  Makefile.in
knetswitch/doc/en/: Makefile  Makefile.am  Makefile.in
knetswitch/knetswitch/: Makefile  Makefile.am  Makefile.in  basicnetworking.ui  dantesocks.ui  datastore.h  ipvalidator.cpp  ipvalidator.h  knetswitch.cpp  knetswitch.desktop  knetswitch.h  knetswitch.lo  knetswitch.moc  libkcm_knetswitch.la  libkcm_knetswitch_la_meta_unload.cpp  libkcm_knetswitch_la_meta_unload.lo  mbasicnetworking.cpp  mbasicnetworking.h  modulelistboxitem.cpp  modulelistboxitem.h  msocks.cpp  msocks.h  netswitchmodule.cpp  netswitchmodule.h  profiletab.cpp  profiletab.h  profiletab.lo  profiletab.moc  profiletab.ui  profilewidget.cpp  profilewidget.h  profilewidget.lo  samplerc  samplerc.org  socksroute.cpp  socksroute.h
knetswitch/knetswitch-api/: KNetSwitch.html  all-globals.html  full-list-KNetSwitch.html  header-list.html  hier.html  index-long.html  index.html  knetswitch_h.html
knetswitch/knetswitch/.deps/: knetswitch.P  libkcm_knetswitch_la_meta_unload.P  profiletab.P  profilewidget.P
knetswitch/knetswitch/.libs/: libkcm_knetswitch.lai
knetswitch/knetswitch/widgets/: Makefile.am  dantesocks.cpp  dantesocks.h  dantesocks.ui
knetswitch/po/: Makefile  Makefile.in
