####### kdevelop will overwrite this part!!! (begin)##########
lib_LIBRARIES = libwidgets.a


INCLUDES = $(all_includes)

# libwidgets_la_LDFLAGS = -version-info 0:0:1

libwidgets_a_METASOURCES=AUTO

libwidgets_a_SOURCES = dantesocks.cpp 

EXTRA_DIST = dantesocks.ui 

####### kdevelop will overwrite this part!!! (end)############
